@@ -1,19 +1,11 @@
 language: perl
 perl:
-    - "5.8"
-    - "5.10"
-    - "5.12"
-    - "5.14"
-    - "5.16"
-    - "5.18"
-    - "5.20"
-    - "5.22"
     - "5.24"
     - "blead"
 
 matrix:
     include:
-        - perl: "5.22"
+        - perl: "5.24"
           env: COVERAGE=1
     allow_failures:
         - perl: "blead"
