@@ -11,10 +11,10 @@ authority  = cpan:PREACTION
 do_munging = 0
 
 [GithubMeta]
-;homepage = http://preaction.me/project
+homepage = http://cpantesters.org
 issues = 1
 [MetaResources]
-;IRC                     = irc://irc.perl.org/#channel
+IRC = irc://irc.perl.org/#cpantesters-discuss
 
 ; --- Module management
 [@Filter]
@@ -74,7 +74,7 @@ copy = CHANGES
 
 [Run::AfterBuild]
 ; Add travis and coveralls badges to README.mkdn
-run = perl -pi -e 's{(# SYNOPSIS)}{# STATUS\n\n<a href="https://travis-ci.org/preaction/CPAN-Testers-Web"><img src="https://travis-ci.org/preaction/CPAN-Testers-Web.svg?branch=master"></a><a href="https://coveralls.io/r/preaction/CPAN-Testers-Web"><img src="https://coveralls.io/repos/preaction/CPAN-Testers-Web/badge.png" alt="Coverage Status" /></a>\n\n$1}' README.mkdn
+run = perl -pi -e 's{(# SYNOPSIS)}{# STATUS\n\n<a href="https://travis-ci.org/cpan-testers/cpantesters-web"><img src="https://travis-ci.org/cpan-testers/cpantesters-web.svg?branch=master"></a><a href="https://coveralls.io/r/cpan-testers/cpantesters-web"><img src="https://coveralls.io/repos/cpan-testers/cpantesters-web/badge.png" alt="Coverage Status" /></a>\n\n$1}' README.mkdn
 
 ; --- Git management
 [CheckChangesHasContent]
@@ -122,7 +122,14 @@ allow_dirty_match = .*[.]PL
 ; --- Project-specific directives
 
 [Prereqs]
-perl = 5.008
+perl = 5.024
+Mojolicious = 6
+Mojolicious::Plugin::Config = 0
+CPAN::Testers::Schema = 0.004
+File::Share = 0
+Log::Any = 1.045 ; Returns message and faster
+Log::Any::Adapter::MojoLog = 0.02
+Import::Base = 0.012 ; Fixed using subs in imports
 
 ;-- Common prereqs with minimum version requirements
 ;Path::Tiny = 0.072 ; Fixes issues with File::Path
@@ -132,7 +139,8 @@ perl = 5.008
 ;Log::Any = 1.045 ; Returns message and faster
 
 [Prereqs / TestRequires]
-;Test::More = 1.001005 ; First version that allows args to subtests
+Test::More = 1.001005 ; First version that allows args to subtests
+Test::Lib = 0
 ;Test::Deep = 0
 ;Test::Differences = 0
 ;Test::Fatal = 0
