@@ -1,0 +1,2 @@
+#!/bin/sh
+exec svlogd -tt ./main
