@@ -1,0 +1,7 @@
+#!/bin/bash
+. /opt/local/perlbrew/etc/bashrc
+eval $( perl -Mlocal::lib )
+
+export MOJO_HOME=$(pwd)
+
+exec cpantesters-web prefork -l http://*:6000 2>&1
