@@ -1,3 +1,5 @@
 Changelog for CPAN-Testers-Web
 
 {{ $NEXT }}
+
+    - Initial release
